InternexDev_Sandbox/src/objects/LoadWebCash_Object_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting is used when moving data from Load Web Cash object to Web Cash Object. It is used for mapping the load web cash object fields to the web cash object fields.</description>
    <fields>
        <fullName>Data_Type__c</fullName>
        <label>Data Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Load_Object_API_Name__c</fullName>
        <description>This field will have the API Names of LoadWebCash object</description>
        <label>Load Object API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <description>Check if field is mandatory for its object</description>
        <label>Required</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <description>Field sequence in custom setting</description>
        <label>Sequence</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WebCash_Object_API__c</fullName>
        <description>API name of a WebCash object to map with LoadWebCash object</description>
        <label>WebCash Object API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>LoadWebCash Object Mapping</label>
</CustomObject>